--- a/edge/popup.html
+++ b/edge/popup.html
@@ -28,6 +28,13 @@
     <button id="cleanup-btn">🧹 Close Heavy Tabs</button>
   </div>
   
+  <!-- Add GitHub footer -->
+  <div class="github-footer">
+    <a href="https://github.com/AllenJohnn/Browser-Memory-Extension" target="_blank" title="View on GitHub">
+      View on GitHub
+    </a>
+  </div>
+  
   <script src="popup.js"></script>
 </body>
 </html>
