--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -1,40 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tab Memory</title>
-  <link rel="stylesheet" href="popup.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tab Memory</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <div class="header">
-    <h3 style="margin: 0;">Tab Memory</h3>
-    <div id="total-memory">Loading...</div>
-  </div>
-  
-  <div class="summary">
-    <div>Total tabs: <span id="tab-count">0</span></div>
-    <div>Memory used: <span id="total-used">0 MB</span></div>
-    <div class="progress-bar">
-      <div class="progress-fill" id="memory-progress"></div>
+    <div class="container">
+        <div class="header">
+            <div class="header-brand">
+                <svg class="brand-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="3" width="7" height="7" rx="1"/>
+                    <rect x="14" y="3" width="7" height="7" rx="1"/>
+                    <rect x="14" y="14" width="7" height="7" rx="1"/>
+                    <rect x="3" y="14" width="7" height="7" rx="1"/>
+                </svg>
+                <div class="brand-text">
+                    <h3>Tab Manager</h3>
+                    <span class="brand-sub">Memory Monitor</span>
+                </div>
+            </div>
+            <div class="header-badge">
+                <span id="total-memory">0 MB</span>
+            </div>
+        </div>
+
+        <div class="stats-grid">
+            <div class="stat-card">
+                <div class="stat-icon-wrapper">
+                    <svg class="stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="18" height="18" rx="2"/>
+                        <line x1="9" y1="3" x2="9" y2="21"/>
+                    </svg>
+                </div>
+                <div class="stat-info">
+                    <div class="stat-label">Active Tabs</div>
+                    <div id="tab-count" class="stat-value">0</div>
+                </div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-icon-wrapper">
+                    <svg class="stat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
+                        <polyline points="7.5 4.21 12 6.81 16.5 4.21"/>
+                        <polyline points="7.5 19.79 7.5 14.6 3 12"/>
+                        <polyline points="21 12 16.5 14.6 16.5 19.79"/>
+                        <polyline points="3.27 6.96 12 12.01 20.73 6.96"/>
+                        <line x1="12" y1="22.08" x2="12" y2="12"/>
+                    </svg>
+                </div>
+                <div class="stat-info">
+                    <div class="stat-label">Memory Used</div>
+                    <div id="total-used" class="stat-value">0 MB</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="progress-card">
+            <div class="progress-top">
+                <span class="progress-title">Memory Usage</span>
+                <span id="memory-percent" class="progress-percent">0%</span>
+            </div>
+            <div class="progress-track">
+                <div id="memory-progress" class="progress-fill"></div>
+            </div>
+        </div>
+
+        <div class="tabs-section">
+            <div class="section-header">
+                <span class="section-title">Active Tabs</span>
+            </div>
+            <div id="tabs-list" class="tabs-list"></div>
+        </div>
+
+        <div class="actions">
+            <button id="refresh-btn" class="btn btn-primary">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="23 4 23 10 17 10"/>
+                    <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"/>
+                </svg>
+                <span>Refresh</span>
+            </button>
+            <button id="sort-btn" class="btn btn-secondary">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="12" y1="5" x2="12" y2="19"/>
+                    <polyline points="19 12 12 19 5 12"/>
+                </svg>
+                <span>Sort</span>
+            </button>
+            <button id="cleanup-btn" class="btn btn-danger">
+                <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="3 6 5 6 21 6"/>
+                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+                </svg>
+                <span>Cleanup</span>
+            </button>
+        </div>
+
+        <div class="footer">
+            <a href="https://github.com/AllenJohnn/Browser-Memory-Extension" target="_blank">
+                <svg class="footer-icon" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+                <span>View on GitHub</span>
+            </a>
+        </div>
     </div>
-  </div>
-  
-  <div id="tabs-list">
-  </div>
-  
-  <div class="controls">
-    <button id="refresh-btn">🔄 Refresh</button>
-    <button id="sort-btn">Sort by Memory ▼</button>
-    <button id="cleanup-btn">🧹 Close Heavy Tabs</button>
-  </div>
-  
-  <!-- Add GitHub footer -->
-  <div class="github-footer">
-    <a href="https://github.com/AllenJohnn/Browser-Memory-Extension" target="_blank" title="View on GitHub">
-      View on GitHub
-    </a>
-  </div>
-  
-  <script src="popup.js"></script>
+
+    <script src="popup.js"></script>
 </body>
 </html>
