--- a/firefox/popup.html
+++ b/firefox/popup.html
@@ -28,10 +28,13 @@
     <button id="cleanup-btn">🧹 Close Heavy Tabs</button>
   </div>
   
-  <!-- Add GitHub footer -->
+  <!-- Add links footer -->
   <div class="github-footer">
     <a href="https://github.com/AllenJohnn/Browser-Memory-Extension" target="_blank" title="View on GitHub">
       View on GitHub
+    </a>
+    <a href="https://allenjohnn.vercel.app/" target="_blank" title="Visit Portfolio">
+      Visit Portfolio
     </a>
   </div>
   
